# Speech_Generation

./: README.md
ASR_decoding/: Report_ASR_decoding.md  pyproject.toml  wav2vec2decoder.py
Digital_Signal_Processing/: Task_1.ipynb  Task_2.ipynb  melbanks.py  pyproject.toml
Numbers_recognition/: ASR_numbers_report.md  pyproject.toml  test_model.py  train_asr_model.py
